tests/testcrate/tests/ui/update_expr.stderr
error[E0308]: mismatched types
  --> $DIR/update_expr.rs:50:56
   |
50 |     let _ = sql!(Table.filter(id == 1).update(field1 = value, i32_field = value));
   |                                                        ^^^^^
   |                                                        |
   |                                                        expected struct `std::string::String`, found integer
   |                                                        help: try using a conversion method: `value.to_string()`
   |
   = note: expected type `std::string::String`
              found type `{integer}`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
